# zpg

./: 2.2.basic_lighting.vs  AbstractLight.cpp  AbstractLight.h  AbstractTransform.cpp  AbstractTransform.h  Application.cpp  Application.h  BushModel.cpp  BushModel.h  BushesModel.cpp  BushesModel.h  CMakeLists.txt  Callback.cpp  Callback.h  Camera.cpp  Camera.h  Colors.cpp  Colors.h  DirectionalLight.h  GiftModel.cpp  GiftModel.h  Light.cpp  Light.h  Loader.cpp  Loader.h  MatrixType.h  Model.cpp  Model.h  Models.cpp  Models.h  MonkeyModel.cpp  MonkeyModel.h  Observer.cpp  Observer.h  PlainModel.cpp  PlaneModel.cpp  PlaneModel.h  PointLight.cpp  PointLight.h  RenderedObject.cpp  (+34 more)
Lights/: AbstractLight.cpp  AbstractLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LightType.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Models/: BushesModel.cpp  GiftModel.h  Models.h  PlainModel.cpp  PlainModel.h  SkycubeModel.cpp  SkycubeModel.h  SphereModel.h  SuziFlatModel.cpp  SuziFlatModel.h  SuziSmoothModel.cpp  SuziSmoothModel.h  TreeModel.h  skycube.h
Models/Objects/: Battery2ObjectModel.cpp  Battery2ObjectModel.h  BatteryObjectModel.cpp  BatteryObjectModel.h  HouseObjectModel.cpp  HouseObjectModel.h  LoaderObject.cpp  LoaderObject.h  PlainObjectModel.cpp  PlainObjectModel.h  TerrainObjectModel.cpp  TerrainObjectModel.h  TreeObjectModel.cpp  TreeObjectModel.h
Models/Textures/: AbstractTexture.cpp  AbstractTexture.h  PlaneTextureModel.cpp  PlaneTextureModel.h  SkyboxTextureModel.cpp  SkyboxTextureModel.h  Texture.cpp  Texture.h  skybox.h  triangle.h
Models/Textures/skybox/: Skybox.cpp  Skybox.h
ShaderControll/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h
Transformations/: AbstractTransform.h  Transformation.cpp  Transformation.h  TransformationType.h
lib/assimp/5.2.5/: INSTALL_RECEIPT.json
lib/assimp/5.2.5/.brew/: assimp.rb
lib/assimp/5.2.5/lib/cmake/assimp-5.2/: assimpTargets.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glew/2.2.0_1/: INSTALL_RECEIPT.json
lib/glfw/docs/html/: compat_guide.html  context_guide.html  group__window.html  intro_guide.html  quick_guide.html
shaders/fragment/: basic.txt  basic2.txt  blinn.txt  blinn2.txt  blinnLights - draft.h  blinnLights.frag  blinnLightsTextures.frag  blinn_new.h  lambert.txt  phong.frag  phong.txt  phongGood - kopie.txt  phongGood.frag  phongWrong.txt  phong_good.txt  phong_wrong.txt  skybox.frag  texture.frag
shaders/vertex/: camera.txt  light.txt  light.vsh  lightBEFORE.txt  lightSKYBOX.vsh  skybox.vsh
